crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__delimiters__left-right-paren.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..26
  delimited "(" ")" @0..26
    row @7..18
      frac Bar @7..18
        row @12..15
          run "a" @13..14
        row @15..18
          run "b" @16..17
-- problems --
