crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__delimiters__left-right-with-middle.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..33
  delimited "{" "}" @0..33
    row @8..9
      run "x" @8..9
    middle:
    row @19..24
      run "x" @19..20
      run ">" @21..22
      run "0" @23..24
-- problems --
